# git_version_utils

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  publish.yml
src/git_version/: __init__.py  cli.py  core.py
tests/: test_git_version.py
tools/: write_version.py
